<resources>
    <string name="app_name">Practica_Grupo07</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Practica Grupo 07</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_programas">Programas de Television</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="msg_nombre">Nombre del Programa</string>
    <string name="msg_fecha_lanzamiento">Fecha Lanzamiento</string>
    <string name="msg_visualizaciones">Visualizaciones</string>
    <string name="msg_Actores">Actores</string>
    <string name="bt_Agregar">Agregar Programa</string>
    <string name="msg_fallo_registro">Fallo el registro</string>
    <string name="msg_fallo_login">Fallo inicio de sesion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_lugar_added">Se agrego el programa</string>
    <string name="msg_data">Error</string>
    <string name="title_activity_principal">Principal</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="menu_home">Home</string>
    <string name="msg_programa_added">agregado</string>
</resources>