<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.practica_examen_grupo7.ui.programas.ProgramasFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_addProgramaFragment"
            app:destination="@id/addProgramaFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.practica_examen_grupo7.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.practica_examen_grupo7.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addProgramaFragment"
        android:name="com.example.practica_examen_grupo7.ui.programas.AddProgramaFragment"
        android:label="fragment_add_programa"
        tools:layout="@layout/fragment_add_programa" >
        <action
            android:id="@+id/action_addProgramaFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>